--- a/3. explain/index.html
+++ b/3. explain/index.html
@@ -6,10 +6,10 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
-  <script language="javascript" type="text/javascript" src="ant.js"></script>
+  <script language="javascript" type="text/javascript" src="explain.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
-  <!-- This line removes any default padding and style. 
+  <style> @import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);</style>
+  <!-- This line removes any default padding and style.
        You might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
