--- a/4. contents/index.html
+++ b/4. contents/index.html
@@ -5,9 +5,10 @@
   <!-- PLEASE NO CHANGES BELOW THIS LINE (UNTIL I SAY SO) -->
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
-  <script language="javascript" type="text/javascript" src="bus.js"></script>
+  <script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
+  <script language="javascript" type="text/javascript" src="contents.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
+  <style> @import url(//fonts.googleapis.com/earlyaccess/kopubbatang.css);</style>
   <!-- This line removes any default padding and style.
        You might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
