--- a/1. opening/index.html
+++ b/1. opening/index.html
@@ -8,8 +8,8 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="opening.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
-  <!-- This line removes any default padding and style. 
+<title>Home</title>
+  <!-- This line removes any default padding and style.
        You might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
 </head>
